# advent-of-rust-2022

./: .gitignore  Cargo.toml
aor2022/: Cargo.toml
aor2022/src/lib/: error.rs  grid.rs  input.rs  iterplus.rs  lib.rs
src/lib/: grid.rs  input.rs
