[package]
name = "aor2022"
version = "0.1.0"
edition = "2021"
authors = ["James Youngman <james@youngman.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
#ndarray = "0.15"		# day 09, 19
#nom = "7"			# day 17
#pathfinding = "3.0.5"           # day 15
#tracing = "0.1"                 # day 17
#tracing-subscriber = "0.2"	# day 17
petgraph = "0.6"
regex = "1"
sscanf = "0.4"
itertools = "0.10"
intervallum = "1.3"
gcollections = "1.4"

[profile.release]
debug = 1

[lib]
name = "lib"
path = "src/lib/lib.rs"


[[bin]]
name = "day01"
[[bin]]
name = "day02"
[[bin]]
name = "day03"
[[bin]]
name = "day04"
[[bin]]
name = "day05"
[[bin]]
name = "day06"
[[bin]]
name = "day07"
[[bin]]
name = "day08"
[[bin]]
name = "day09"
[[bin]]
name = "day10"
[[bin]]
name = "day11"
[[bin]]
name = "day12"
[[bin]]
name = "day13"
[[bin]]
name = "day14"
[[bin]]
name = "day15"
