[package]
name = "aor2022"
version = "0.1.0"
edition = "2021"
authors = ["James Youngman <james@youngman.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
#ndarray = "0.15"		# day 09, 19
#nom = "7"			# day 17
#pathfinding = "3.0.5"           # day 15
#tracing = "0.1"                 # day 17
#tracing-subscriber = "0.2"	# day 17
regex = "1"

[profile.release]
debug = 1

[lib]
name = "lib"
path = "src/lib/lib.rs"


[[bin]]
name = "day01"
[[bin]]
name = "day02"
[[bin]]
name = "day03"
[[bin]]
name = "day04"
[[bin]]
name = "day05"
